--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,1 +1,31 @@
 en:
+  base_title:
+        ruby: "Ruby on Rails Tutorial Sample App"
+ static_pages:
+    home:
+      title: "Home"
+      sample_app: "Sample App"
+      content: "This is the home page for <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a> the  sample application."   
+    help:
+       title: "Help"
+       help : "Help"
+       content: "Get help on the Ruby on Rails Tutorial at the
+                 <a href="http://www.railstutorial.org/help">Rails Tutorial help page</a>.
+                 To get help on this sample app, see the
+                 <a href="http://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
+                 book</a>."
+    about: 
+       title: "About"
+       about: "About"
+       content: "The <a href="http://www.railstutorial.org/"><em>Ruby on Rails
+                 Tutorial</em></a> is a
+                 <a href="http://www.railstutorial.org/book">book</a> and
+                 <a href="http://screencasts.railstutorial.org/">screencast series</a>
+                 to teach web development with
+                 <a href="http://rubyonrails.org/">Ruby on Rails</a>.
+                 This is the sample application for the tutorial."
+    contact:
+       title: "Contact"
+       contact: " contact"
+       content: "Contact the Ruby on Rails Tutorial about the sample app at the
+                 <a href="http://www.railstutorial.org/contact">contact page</a>."
