--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,31 +1,49 @@
 en:
   base_title:
-        ruby: "Ruby on Rails Tutorial Sample App"
- static_pages:
+    ruby: "Ruby on Rails Tutorial Sample App"
+  static_pages:
     home:
       title: "Home"
       sample_app: "Sample App"
-      content: "This is the home page for <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a> the  sample application."   
+      link_to: "Sign up now!"
+      h1_tag: "Welcome to the Sample App"
+      h2_tag_1: "This is the home page for the "
+      h2_tag_2: "sample application."
+      title_1: "Ruby on Rails Tutorial"
     help:
-       title: "Help"
-       help : "Help"
-       content: "Get help on the Ruby on Rails Tutorial at the
-                 <a href="http://www.railstutorial.org/help">Rails Tutorial help page</a>.
-                 To get help on this sample app, see the
-                 <a href="http://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
-                 book</a>."
-    about: 
-       title: "About"
-       about: "About"
-       content: "The <a href="http://www.railstutorial.org/"><em>Ruby on Rails
-                 Tutorial</em></a> is a
-                 <a href="http://www.railstutorial.org/book">book</a> and
-                 <a href="http://screencasts.railstutorial.org/">screencast series</a>
-                 to teach web development with
-                 <a href="http://rubyonrails.org/">Ruby on Rails</a>.
-                 This is the sample application for the tutorial."
+      title: "Help"
+      help : "Help"
+      content_1: "Get help on the Ruby on Rails Tutorial at the"
+      content_2: "To get help on this sample app, see the "
+      title_1: "Ruby on Rails Tutorial"
+      title_2: "Rails Tutorial help page"
+    about:
+      title: "About"
+      about: "About"
+      content_1: "The"
+      content_2: "is a"
+      content_3: "and"
+      content_4: "to teach web development with"
+      content_5: "This is the sample application for the tutorial."
+      title_1: "Ruby on Rails Tutorial"
+      title_2: "screencast series"
+      title_3: "Ruby on Rails"
     contact:
-       title: "Contact"
-       contact: " contact"
-       content: "Contact the Ruby on Rails Tutorial about the sample app at the
-                 <a href="http://www.railstutorial.org/contact">contact page</a>."
+      title: "Contact"
+      contact: " contact"
+      content: "Contact the Ruby on Rails Tutorial about the sample app at the"
+      title_1: "contact page"
+  layouts:
+    footer:
+      small_1: "The"
+      small_2: "by"
+      title_1: "Ruby on Rails Tutorial"
+      title_2: "Michael Hartl"
+      title_3: "News"
+      li_1: "About"
+      li_2: "Contact"
+    header:
+      title_1: "Sample app"
+      title_2: "Home"
+      title_3: "Help"
+      title_4: "Log in"
