--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,3 +47,8 @@ en:
       title_2: "Home"
       title_3: "Help"
       title_4: "Log in"
+  users:
+    new:
+      title: "Sign up"
+      h1: "Sign up"
+      p: "This will be a signup page for new users."
