--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -52,3 +52,10 @@ en:
       title: "Sign up"
       h1: "Sign up"
       p: "This will be a signup page for new users."
+      name: "Name"
+      email: "Email"
+      password: "Password"
+      password_confirmation: "Password_confirmation"
+      confirmation: "Confirmation"
+      submit: "Create my account"
+      flash: "Welcome to the Sample App!"
