--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -52,3 +52,10 @@ vi:
       title: "Đăng ký"
       h1: "Đăng ký"
       p: "Đây sẽ là trang đăng ký cho người dùng mới"
+      name: "Tên"
+      email: "Email"
+      password: "Mật khẩu"
+      password_confirmation: "Xác nhận mật khẩu"
+      confirmation: "Xác nhận"
+      submit: "Tạo tài khoản của tôi"
+      flash: "Chào mừng bạn đến với Ứng dụng mẫu!"
